[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sysview"
version = "0.1.0"
description = "Live system monitor in your terminal"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
    "psutil>=5.9",
]

[project.scripts]
sysview = "sysview.main:main"

[tool.setuptools.packages.find]
where = ["."]
